--- a/public/less/style.css
+++ b/public/less/style.css
@@ -511,13 +511,16 @@ select:focus {
     margin-bottom: -36px;
   }
 }
-.half-bg img {
-  width: auto;
-  max-width: unset;
+.half-bg-img {
+  width: 100%;
+  height: 100%;
+}
+.half-bg-img img {
+  width: 100%;
   height: auto;
 }
 @media screen and (max-width: 780px) {
-  .half-bg img {
+  .half-bg-img img {
     width: 120%;
   }
 }
@@ -3007,10 +3010,156 @@ ul.sub-menu-vertical > li a {
 .breadcrumbs-box em {
   padding: 0 4px;
 }
+/*
+.detail {
+  justify-content: space-between;
+  border-bottom: 2px solid @brown-deep;
+  background: @white;
+  h2.inner {
+    width: 100%;
+    font-size: 48px;
+    border-top: 1px solid @border-gray;
+    padding-top:  30px;
+  }
+  aside {
+    .col();
+    .size(3.8);
+    .sm-block({ display: none;});
+
+  }
+  &-content {
+    .col();
+    .size(8.2);
+    .size-sm(12);
+    .padding-left-right;
+    padding-bottom: 50px;
+
+    h1 {
+      font-size: 60px;
+      border-bottom: 1px solid @border-light;
+      .headingsBold;
+      margin-bottom: 34px;
+    }
+    h2, h3 {
+      font-size: 30px;
+      .padding-half-top-bottom;
+      margin: 0;
+    }
+    img {
+      display: block;
+      width: 100%;
+      .padding-bottom;
+    }
+    p {
+      .padding-bottom;
+    }
+    strong {
+      font-weight: bold;
+    }
+    ul {
+      padding-left: 20px;
+      li {
+        line-height: 160%;
+        &:before {
+          content: '\2022';
+          display: inline-block;
+          margin-right: 10px;
+        }
+      }
+    }
+  }
+  &-clients {
+    .row-flex();
+    justify-content: space-between;
+    padding-bottom: 30px;
+  }
+  &-client {
+    .col();
+    .size(5.8);
+    text-align: justify;
+    strong {
+      display: block;
+      padding-bottom: 20px;
+    }
+    a {
+      color: @red-main;
+    }
+  }
+  &-articles {
+    .row-flex();
+    justify-content: space-between;
+    padding-bottom: 50px;
+    margin-bottom: 30px;
+    border-bottom: 1px solid @border-gray;
+
+  }
+  &-article {
+    .col();
+    .size(5.8);
+    text-align: justify;
+    a {
+      color: @black-matte;
+      &:hover {
+        color: @red-main;
+      }
+
+    }
+  }
+  &-contrast {
+    color: @white;
+    padding-bottom: 30px;
+    &-header {
+      .padding-half;
+      padding-bottom: 0;
+      .headingsBold;
+      background: @red-main;
+      strong {
+        font-size: 22px;
+        display: block;
+      }
+      p {
+        font-size: 48px;
+        padding-bottom: 0;
+      }
+    }
+    &-body {
+      .padding-half;
+      background: url("../img/bg/bronya.png");
+      strong {
+        .headingsBold;
+      }
+      table {
+        width: 100%;
+        border: 1px solid @white;
+      }
+      td {
+        border: 1px solid @white;
+        .padding-half;
+        color: @white;
+      }
+      tr {
+        &:first-of-type {
+          td {
+            .headingsBold;
+            text-align: center;
+          }
+        }
+      }
+    }
+    &-footer {
+      height: 20px;
+      background: url("../img/bg/kosaya.png");
+    }
+  }
+}
+*/
 .detail {
   justify-content: space-between;
   border-bottom: 2px solid #444;
   background: #ffffff;
+}
+.detail a {
+  color: #be0005;
 }
 .detail h2.inner {
   width: 100%;
@@ -3172,6 +3321,54 @@ ul.sub-menu-vertical > li a {
 .detail-contrast-footer {
   height: 20px;
   background: url("../img/bg/kosaya.png");
+}
+.detail-utp h2 {
+  font-size: 35px;
+}
+.detail-utp-text {
+  background: url("../img/bg/bronya.png");
+  color: #ffffff;
+  padding-bottom: 16px;
+  margin-bottom: 30px;
+}
+.detail-utp-text h3 {
+  font-size: 48px;
+  padding: 16px;
+}
+.detail-utp-text p {
+  padding: 16px;
+}
+.detail-sign {
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+.detail-sign img {
+  max-width: 400px;
+}
+.detail-aim {
+  border-top: 7px solid #0a0a0a;
+  padding-top: 32px;
+  padding-bottom: 16px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 0px;
+  margin-right: 0px;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.detail-aim-img {
+  box-sizing: border-box;
+  word-wrap: break-word;
+  margin-left: 0px;
+  margin-right: 0px;
+  width: calc(33.333333333333336% - 0px);
+}
+.detail-aim-text {
+  box-sizing: border-box;
+  word-wrap: break-word;
+  margin-left: 0px;
+  margin-right: 0px;
+  width: calc(62.50000000000001% - 0px);
 }
 .share {
   color: #444;
