--- a/public/less/variables.less
+++ b/public/less/variables.less
@@ -464,11 +464,16 @@ select {
     overflow: hidden;
     .sm-block({ position: unset; display: block; margin-bottom: -72px;});
     .xs-block({margin-bottom: -36px;});
-    img {
-      width: auto;
-      max-width: unset;
-      height: auto;
-      .sm-block({ width: 120%;});
+    &-img {
+      width: 100%;
+      height: 100%;
+
+      img {
+        width: 100%;
+        height: auto;
+        .sm-block({ width: 120%;});
+      }
+
     }
   }
   &-items {
